Execute commands on NTP in a completion handler.

When creating a new tab from the NC extension, commands can be executed
on it (focus Omnibox, launch QR Code search, launch Voice Search).
The current process relies on async call to launch the command after the
tab is created.
For some scenarios (focus Omnibox while creating a new tab), this is not
enough, and the search is cancelled by the new tab animation.

Add a completion handler in the tab creation to execute the command
the tab is created.

Bug: 744596
Change-Id: I3e4688ff858e4ed70e7df62ac10e541a7375cbf1
Reviewed-on: https://chromium-review.googlesource.com/574537
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487881}
Former-commit-id: d508a5632a384270880f5616428fc9d6a37c3d3d