ios/chrome/app/application_delegate/url_opener_unittest.mm
@@ -70,10 +70,13 @@ typedef Tab* (^mock_gurl_nsuinteger_pagetransition)(const GURL&,
 @property(nonatomic, assign) GURL tabURL;
 @property(nonatomic, assign) NSUInteger position;
 @property(nonatomic, assign) ui::PageTransition transition;
+@property(nonatomic, assign)
+    ProceduralBlock foregroundTabWasAddedCompletionBlock;
 
 - (Tab*)addSelectedTabWithURL:(const GURL&)url
                       atIndex:(NSUInteger)position
-                   transition:(ui::PageTransition)transition;
+                   transition:(ui::PageTransition)transition
+           tabAddedCompletion:(ProceduralBlock)completion;
 - (void)expectNewForegroundTab;
 - (void)setActive:(BOOL)active;
 - (TabModel*)tabModel;
@@ -86,13 +89,17 @@ typedef Tab* (^mock_gurl_nsuinteger_pagetransition)(const GURL&,
 @synthesize tabURL = _tabURL;
 @synthesize position = _position;
 @synthesize transition = _transition;
+@synthesize foregroundTabWasAddedCompletionBlock =
+    _foregroundTabWasAddedCompletionBlock;
 
 - (Tab*)addSelectedTabWithURL:(const GURL&)url
                       atIndex:(NSUInteger)position
-                   transition:(ui::PageTransition)transition {
+                   transition:(ui::PageTransition)transition
+           tabAddedCompletion:(ProceduralBlock)completion {
   self.tabURL = url;
   self.position = position;
   self.transition = transition;
+  self.foregroundTabWasAddedCompletionBlock = completion;
   return nil;
 }
 
